# cppdesk

./: .clang-format  .clang-tidy  .gitignore  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  conanfile.py  docker-compose.yml  package.json  vcpkg.json
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: android.yml  ci.yml  detailed-ci.yml  flutter-ci.yml  ios.yml  nightly.yml  release.yml
appimage/: cppdesk.yml
cmake/: Sanitizers.cmake  toolchain_aarch64-android.cmake  toolchain_aarch64-linux-gnu.cmake  toolchain_arm-linux-gnueabihf.cmake  toolchain_armv7-android.cmake  toolchain_i686-linux-gnu.cmake  toolchain_mips64-linux-gnu.cmake  toolchain_powerpc64-linux-gnu.cmake  toolchain_riscv64-linux-gnu.cmake  toolchain_x86-android.cmake  toolchain_x86_64-android.cmake
docs/: API.md  API_REFERENCE.md  ARCHITECTURE.md  BUILDING.md  CODECS.md  CONTRIBUTING.md  ENCRYPTION.md  FAQ.md  PLATFORM_ANDROID.md  PLATFORM_IOS.md  PLATFORM_LINUX.md  PLATFORM_MACOS.md  PLATFORM_WINDOWS.md  PROTOCOL.md  SECURITY.md
flatpak/: com.cppdesk.CppDesk.desktop  com.cppdesk.CppDesk.metainfo.xml  com.cppdesk.CppDesk.yml
include/cppdesk/client/: client.hpp
include/cppdesk/platform/: platform.hpp
include/cppdesk/rendezvous/: rendezvous.hpp
include/cppdesk/server/: server.hpp
libs/clipboard/: CMakeLists.txt
libs/clipboard/include/clipboard/: clipboard.hpp
libs/clipboard/src/: clipboard.cpp
libs/common/: CMakeLists.txt
libs/common/include/common/: config.hpp  crypto.hpp  protocol.hpp
libs/common/src/: addr.cpp  common_utils.cpp  config.cpp  crypto.cpp  error.cpp  fs.cpp  logging.cpp  protocol.cpp  stream.cpp  timer.cpp  tls.cpp  version.cpp
libs/enigo/: CMakeLists.txt
libs/enigo/include/enigo/: enigo.hpp
libs/enigo/src/: enigo.cpp
libs/portable/: CMakeLists.txt
libs/portable/include/portable/: portable.hpp
libs/portable/src/: portable.cpp
libs/remote_printer/: CMakeLists.txt
libs/remote_printer/include/remote_printer/: remote_printer.hpp
libs/remote_printer/src/: remote_printer.cpp
libs/scrap/: CMakeLists.txt
libs/scrap/include/scrap/: scrap.hpp
libs/scrap/src/: scrap.cpp  scrap_codec.cpp  scrap_dxgi.cpp  scrap_x11.cpp
libs/virtual_display/: CMakeLists.txt
libs/virtual_display/include/virtual_display/: virtual_display.hpp
libs/virtual_display/src/: virtual_display.cpp
proto/: messages.proto
res/: com.cppdesk.CppDesk.plist  cppdesk-client.service  cppdesk-server.service  cppdesk-server.xml  cppdesk.appdata.xml  cppdesk.desktop
scripts/: benchmark.sh  build_android.sh  build_appimage.sh  build_ios.sh  build_linux.sh  build_macos.sh  build_windows.sh  code_format.sh  count_lines.sh  generate_proto.sh  install_deps_ci.sh  notarize_macos.sh  package_all.sh  package_deb.sh  package_dmg.sh  package_exe.sh  package_rpm.sh  package_zip.sh  pre-commit  run_tests.sh  setup_dev_env.sh  sign_release.sh  upload_release.sh
snap/: snapcraft.yaml
src/: CMakeLists.txt  cli_main.cpp  main.cpp  server_main.cpp
src/auth/: auth_2fa.cpp
src/cli/: cli.cpp
src/client/: client.cpp  helper.cpp  io_loop.cpp  screenshot_full.cpp
src/clipboard/: clipboard.cpp
src/codec/: audio_codec.cpp  video_codec.cpp
src/common/: config_manager.cpp  database_utils.cpp  encoding_utils.cpp  filesystem_utils.cpp  network_utils.cpp  security_utils.cpp  string_utils.cpp  time_utils.cpp  tls_utils.cpp
src/ffi/: flutter_bridge.cpp
src/hbbs_http/: api.cpp  http_server.cpp  sync.cpp
src/ipc/: ipc.cpp
src/lang/: ar.cpp  ar_ma.cpp  bg.cpp  bn.cpp  cn.cpp  cn_tw.cpp  cs.cpp  da.cpp  de.cpp  de_formal.cpp  el.cpp  en_au.cpp  en_gb.cpp  eo.cpp  es.cpp  es_ar.cpp  es_mx.cpp  et.cpp  eu.cpp  fa.cpp  fi.cpp  fil.cpp  fr.cpp  fr_ca.cpp  he.cpp  hi.cpp  hr.cpp  hu.cpp  id.cpp  it.cpp  ja.cpp  km.cpp  ko.cpp  ko_kp.cpp  locales.cpp  lt.cpp  lv.cpp  ml.cpp  ms.cpp  nb.cpp  (+21 more)
src/network/: kcp_stream.cpp  lan.cpp
src/platform/android/: platform_android_full.cpp
src/platform/ios/: platform_ios_full.mm
src/platform/linux/: dbus.cpp  linux_desktop_manager.cpp  wayland_capture.cpp
src/platform/macos/: delegate.cpp
src/platform/windows/: acl.cpp  platform_windows.cpp  virtual_display_full.cpp  win_device.cpp
src/port_forward/: port_forward.cpp
src/privacy/: privacy_mode.cpp
src/rendezvous/: rendezvous.cpp
src/server/: connection.cpp  connection_state.cpp  server.cpp  video_qos.cpp
src/server/services/: audio_service.cpp  clipboard_service.cpp  clipboard_service_full.cpp  display_service.cpp  input_service.cpp  printer_service.cpp  terminal_service.cpp  video_qos_full.cpp  video_service.cpp
src/ui/: legacy_ui.cpp
src/updater/: auto_update.cpp  updater.cpp  updater_full.cpp
src/whiteboard/: whiteboard.cpp  whiteboard_full.cpp
tests/: test_auth.cpp  test_cli.cpp  test_client.cpp  test_clipboard_lib.cpp  test_codec.cpp  test_common.cpp  test_common_extended.cpp  test_comprehensive.cpp  test_config.cpp  test_crypto_edge.cpp  test_crypto_full.cpp  test_edge_cases.cpp  test_encoding.cpp  test_enigo.cpp  test_hbbs_http.cpp  test_integration.cpp  test_ipc.cpp  test_locale.cpp  test_matrix_full.cpp  test_network.cpp  test_platform.cpp  test_port_forward.cpp  test_privacy.cpp  test_protocol_detail.cpp  test_regression.cpp  test_rendezvous.cpp  test_scrap.cpp  test_server_services.cpp  test_services_detailed.cpp  test_stream.cpp  test_stress.cpp  test_tls.cpp  test_updater.cpp  test_validation.cpp  test_whiteboard.cpp
