add_library(cppdesk_clipboard STATIC src/clipboard.cpp)
target_include_directories(cppdesk_clipboard PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_libraries(cppdesk_clipboard PUBLIC spdlog::spdlog)
if(PLATFORM_LINUX)
  target_link_libraries(cppdesk_clipboard PUBLIC ${X11_LIBRARIES})
elseif(PLATFORM_MACOS)
  target_link_libraries(cppdesk_clipboard PUBLIC "-framework AppKit" "-framework Foundation")
endif()
