add_library(cppdesk_enigo STATIC src/enigo.cpp)
target_include_directories(cppdesk_enigo PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_libraries(cppdesk_enigo PUBLIC spdlog::spdlog)
if(PLATFORM_LINUX)
  target_link_libraries(cppdesk_enigo PUBLIC ${X11_LIBRARIES} ${XTST_LIBRARIES})
elseif(PLATFORM_MACOS)
  target_link_libraries(cppdesk_enigo PUBLIC "-framework ApplicationServices" "-framework Carbon")
endif()
